<resources>
    <string name="app_name">Pop Movies</string>

    <!-- Action bar menu items labels -->
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort by</string>

    <string name="title_activity_movie_details">Movie Details</string>

    <!-- Strings to describe errors when fetching movie data -->
    <string name="io_error_message">IO Error:\u0020</string>
    <string name="error_closing_reader">Error closing buffered reader</string>

    <!-- Labels for sort options that appear in action bar spinner -->
    <string name="sort_title_most_popular">Most popular</string>
    <string name="sort_title_highest_rated">Highest-rated</string>
    <string name="sort_title_favorites">Favorites</string>

    <!-- Values for the sort options associated with their label selected-->
    <string name="sort_most_popular_value" translatable="false">popularity.desc</string>
    <string name="sort_highest_rated_value" translatable="false">vote_average.desc</string>
    <string name="sort_favorites_value" translatable="false">favorites</string>
    <string name="sort_preference_default" translatable="false">popularity.desc</string>

    <!-- Key name to get sort preference from Shared Preferences -->
    <string name="sort_preference_key" translatable="false">sort</string>
    <string name="sort_position_preference_key" translatable="false">sort_position</string>

    <!-- Placeholder strings to help with the use of design view for movie_detail_fragment.xml -->
    <string name="original_title">Original Title</string>
    <string name="release_year">Release Year</string>
    <string name="runtime">Runtime</string>
    <string name="user_rating">User Rating</string>
    <string name="plot_synopsis">Plot Synopsis</string>

    <string name="user_rating_default" translatable="false">0.0</string>

    <!-- Added to the value retrieved for user rating to show the user the maximum rating possible -->
    <string name="user_rating_of_ten" translatable="false">/10</string>

    <!-- Added to the value retrieved for runtime -->
    <string name="runtime_units">min</string>

    <!-- Displayed error for when the device doesn't have an active internet connection -->
    <string name="no_internet_error">Please make sure that your internet connection is active</string>

    <string name="error_saving_favorite">There was an error trying to save all the movie\'s details to your favorite\'s list</string>
    <string name="error_deleting_favorite">The movie could not be removed from your favorite\'s list</string>

    <string name="no_trailers_found">No trailers found for\u0020</string>
    <string name="no_reviews_found">No reviews found for\u0020</string>
    <string name="no_match_view_type">No match for view type:\u0020</string>
    <string name="review_by">Review by\u0020</string>
    <string name="review_dialog_button_ok">OK</string>

</resources>
