<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/original_title"
            android:id="@+id/originalTitle"
            android:textSize="@dimen/original_title_font_size"
            android:background="@color/teal500"
            android:textColor="@color/white"
            android:paddingBottom="@dimen/original_title_padding_bottom"
            android:paddingLeft="@dimen/original_title_padding_left"
            android:paddingTop="@dimen/original_title_padding_top"
            android:paddingRight="@dimen/original_title_padding_right"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_details_top_margin"
            android:layout_marginLeft="@dimen/layout_details_left_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moviePoster"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/details_info_left_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/release_year"
                    android:id="@+id/releaseYear"
                    android:layout_gravity="left"
                    android:textSize="@dimen/release_year_font_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/user_rating"
                    android:id="@+id/userRating"
                    android:layout_gravity="left"
                    android:textSize="@dimen/user_rating_font_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/user_rating_top_margin"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star"
                    android:id="@+id/imageButton"
                    android:onClick="markFavorite"
                    android:layout_marginLeft="@dimen/left_margin_favorite_button"
                    android:paddingLeft="@dimen/left_padding_favorite_button"
                    android:scaleType="fitStart"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plot_synopsis"
            android:id="@+id/plotSynopsis"
            android:inputType="textMultiLine"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/synopsis_left_margin"
            android:layout_marginTop="@dimen/synopsis_top_margin"
            android:layout_marginBottom="@dimen/synopsis_bottom_margin"
            android:layout_marginRight="@dimen/synopsis_right_margin"
            android:textSize="@dimen/synopsis_font_size"
            android:gravity="left"/>

    </LinearLayout>
</ScrollView>
